--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
-        const apiKey = 'YOUR_API_KEY'; // Replace with your API Key
-        const cx = 'YOUR_CSE_ID'; // Replace with your Custom Search Engine ID
+        const apiKey = 'AIzaSyCs3u6kiXetfz1CB36ps5ygXJIZkzIngR0'; // Your API Key
+        const cx = 'a68c996da9a304f3b'; // Your Custom Search Engine ID
 
         document.getElementById('searchForm').addEventListener('submit', function(event) {
             event.preventDefault();
