--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MayaMeera Search Results</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -10,61 +13,84 @@
         }
     </style>
 </head>
-<body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-300">
+<body class="bg-gray-100 text-gray-900 transition-colors duration-300" id="body">
     <div class="flex flex-col items-center justify-center min-h-screen">
         <div class="text-center mb-8">
             <h1 class="text-6xl font-bold text-blue-600 dark:text-blue-400">MayaMeera</h1>
         </div>
         <div class="w-full max-w-lg mb-8">
-            <form action="/search" method="GET" class="flex items-center bg-white dark:bg-gray-800 rounded-full shadow-md p-4">
-                <input type="text" name="q" class="flex-grow px-4 py-2 text-gray-700 dark:text-gray-300 bg-white dark:bg-gray-800 rounded-l-full focus:outline-none" placeholder="Search MayaMeera...">
+            <form id="searchForm" class="flex items-center bg-white dark:bg-gray-800 rounded-full shadow-md p-4">
+                <input type="text" id="query" class="flex-grow px-4 py-2 text-gray-700 dark:text-gray-300 bg-white dark:bg-gray-800 rounded-l-full focus:outline-none" placeholder="Search MayaMeera..." required>
                 <button type="submit" class="bg-blue-600 text-white rounded-full px-4 py-2 ml-2 hover:bg-blue-700 dark:hover:bg-blue-500 focus:outline-none">
                     <i class="fas fa-search"></i>
                 </button>
             </form>
         </div>
-        <div class="w-full max-w-4xl mb-8">
-            <div class="flex justify-around bg-white dark:bg-gray-800 rounded-lg shadow-md p-4">
-                <a href="#" class="text-blue-600 dark:text-blue-400 font-semibold">All</a>
-                <a href="#" class="text-gray-600 dark:text-gray-400">Videos</a>
-                <a href="#" class="text-gray-600 dark:text-gray-400">Images</a>
-                <a href="#" class="text-gray-600 dark:text-gray-400">Maps</a>
-            </div>
-        </div>
-        <div class="w-full max-w-4xl">
-            <div class="bg-white dark:bg-gray-800 bg-opacity-50 dark:bg-opacity-50 backdrop-filter backdrop-blur-lg rounded-lg shadow-md p-6 mb-6">
-                <h2 class="text-2xl font-bold mb-2">Search Results for "example query"</h2>
-                <div class="space-y-4">
-                    <!-- Sample Web Results -->
-                    <div class="p-4 bg-gray-100 dark:bg-gray-700 bg-opacity-50 dark:bg-opacity-50 backdrop-filter backdrop-blur-lg rounded-lg">
-                        <a href="#" class="text-blue-600 dark:text-blue-400 text-xl font-semibold">Result Title 1</a>
-                        <p class="text-gray-700 dark:text-gray-300">This is a brief description of the first search result.</p>
-                        <a href="#" class="text-blue-500 dark:text-blue-300">www.example1.com</a>
-                    </div>
-                    <!-- Add more results similarly -->
-
-                </div>
-            </div>
-        </div>
+        <div class="w-full max-w-4xl" id="results"></div>
         <div class="mt-4">
             <button id="theme-toggle" class="bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-gray-200 rounded-full px-4 py-2 focus:outline-none">
                 <i class="fas fa-moon"></i> <span id="theme-toggle-text">Dark Mode</span>
             </button>
         </div>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
+        const apiKey = 'AIzaSyCs3u6kiXetfz1CB36ps5ygXJIZkzIngR0'; // Your API Key
+        const cx = 'a68c996da9a304f3b'; // Your Custom Search Engine ID
+        const body = document.getElementById('body');
         const themeToggle = document.getElementById('theme-toggle');
         const themeToggleText = document.getElementById('theme-toggle-text');
-        const body = document.body;
 
+        // Check for saved theme in localStorage
+        if (localStorage.getItem('theme') === 'dark') {
+            body.classList.add('dark');
+            themeToggleText.textContent = 'Light Mode';
+        } else {
+            body.classList.remove('dark');
+            themeToggleText.textContent = 'Dark Mode';
+        }
+
+        // Theme toggle functionality
         themeToggle.addEventListener('click', () => {
             body.classList.toggle('dark');
             if (body.classList.contains('dark')) {
                 themeToggleText.textContent = 'Light Mode';
+                localStorage.setItem('theme', 'dark'); // Save dark mode preference
             } else {
                 themeToggleText.textContent = 'Dark Mode';
+                localStorage.setItem('theme', 'light'); // Save light mode preference
             }
         });
+
+        // Search function
+        document.getElementById('searchForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            const query = document.getElementById('query').value;
+            search(query);
+        });
+
+        function search(query) {
+            $.get(`https://www.googleapis.com/customsearch/v1?q=${query}&key=${apiKey}&cx=${cx}`, function(data) {
+                let results = '<h2 class="text-2xl font-bold mb-4">Search Results for "' + query + '"</h2>';
+                if (data.items) {
+                    data.items.forEach(item => {
+                        results += `
+                            <div class="p-4 bg-gray-100 dark:bg-gray-700 rounded-lg shadow-md">
+                                <a href="${item.link}" class="text-blue-600 dark:text-blue-400 text-xl font-semibold" target="_blank">${item.title}</a>
+                                <p class="text-gray-700 dark:text-gray-300">${item.snippet}</p>
+                                <a href="${item.link}" class="text-blue-500 dark:text-blue-300">${item.link}</a>
+                            </div>
+                        `;
+                    });
+                } else {
+                    results = '<p class="text-gray-700 dark:text-gray-300">No results found.</p>';
+                }
+                document.getElementById('results').innerHTML = results;
+            }).fail(function() {
+                document.getElementById('results').innerHTML = '<p class="text-red-600 dark:text-red-300">Error occurred while fetching search results.</p>';
+            });
+        }
     </script>
 </body>
 </html>
